[gd_scene load_steps=10 format=2]

[ext_resource path="res://Count_Timer.gd" type="Script" id=1]
[ext_resource path="res://Fonts/spacegrotesk/SpaceGrotesk-Regular.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 28
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 80
font_data = ExtResource( 3 )

[node name="PhasmoFriend" type="Node2D"]

[node name="Main Screen" type="Node2D" parent="."]

[node name="Sanity" type="RichTextLabel" parent="Main Screen"]
margin_left = 250.0
margin_top = 20.0
margin_right = 401.0
margin_bottom = 126.0
custom_fonts/normal_font = SubResource( 1 )
text = "Last Known Sanity"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sanity_Input" type="SpinBox" parent="Main Screen/Sanity"]
margin_left = 7.0
margin_top = 24.0
margin_right = 141.0
margin_bottom = 95.0
theme = SubResource( 7 )
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Count" type="Node" parent="Main Screen"]
script = ExtResource( 1 )

[node name="CountDown_Text" type="RichTextLabel" parent="Main Screen/Count"]
margin_left = 62.0561
margin_top = 61.9897
margin_right = 157.056
margin_bottom = 107.99
custom_fonts/normal_font = SubResource( 2 )
text = "00:00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountDown_Timer" type="Timer" parent="Main Screen/Count"]

[node name="CountDown_Difficulty" type="MenuButton" parent="Main Screen/Count"]
margin_left = 21.0
margin_top = 17.0
margin_right = 184.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 3 )
text = "Difficulty Level"
flat = false
items = [ "Professional", null, 0, false, false, 0, 0, null, "", false, "Intermediate", null, 0, false, false, 1, 0, null, "", false, "Amateur", null, 0, false, false, 2, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountDown_Start" type="Button" parent="Main Screen/Count"]
margin_left = 187.0
margin_top = 17.0
margin_right = 245.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 4 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountDown_Popup" type="AcceptDialog" parent="Main Screen/Count"]
margin_left = 14.0
margin_top = 25.0
margin_right = 246.0
margin_bottom = 107.0
window_title = "Select Difficulty"
dialog_text = "Select a Difficulty Please"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountUp_Timer" type="Timer" parent="Main Screen/Count"]

[node name="CountUp_Text" type="RichTextLabel" parent="Main Screen/Count"]
margin_left = 35.0
margin_top = 108.0
margin_right = 410.0
margin_bottom = 208.0
custom_fonts/normal_font = SubResource( 5 )
text = "00:00:00"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Main Screen/Count/CountDown_Timer" to="Main Screen/Count" method="_on_CountDown_Timer_timeout"]
[connection signal="pressed" from="Main Screen/Count/CountDown_Start" to="Main Screen/Count" method="_on_CountDown_Start_pressed"]
[connection signal="timeout" from="Main Screen/Count/CountUp_Timer" to="Main Screen/Count" method="_on_CountUp_Timer_timeout"]
